# starray

./: .gitignore  AGENTS.md  AI_SOFTWARE_FACTORY_SUMMARY.md  CHANGELOG.md  README.md  ROADMAP.md  STARRAY_SUMMARY.md  codex-thread  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: factory.toml  starray.toml
docs/: architecture.md  release.md
docs/adr/: ADR-001.md
scripts/: install.sh
src/ai_software_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/factory/: __init__.py  cli.py  config.py  logging_utils.py  session.py
src/starray/: __init__.py  analyst.py  cli.py  config.py  logging_utils.py  providers.py
tests/: test_analyst.py  test_config.py  test_session.py
