[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-software-factory"
version = "0.1.0"
description = "CLI-first AI software factory"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[project.scripts]
factory = "factory.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
